src/main/java/com/example/stream/quarkus/registry/model/error/PersonServerError.java
package com.example.stream.quarkus.registry.model.error;

public record PersonServerError() implements PersonError {
}
